# opencv-action

./: README.md  action.yml
.github/workflows/: test.yml
test/: CMakeLists.txt  testbed.cpp
